@@ -1,2 +1,0 @@
-PulseAudio Volume Meter (pavumeter) is a simple GTK volume meter for the
-PulseAudio sound server.
