@@ -1,4 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2009/06/14 17:32:20 joerg Exp $
-bin/pavumeter
-share/applications/pavumeter-record.desktop
-share/applications/pavumeter.desktop
