@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2021/10/26 09:59:22 nia Exp $
-
-BLAKE2s (pavumeter-0.9.3.tar.gz) = a0c7fbf4ed4aa68f351d8908f6b64553c1a723c7986728a4ac8d58d536b54e97
-SHA512 (pavumeter-0.9.3.tar.gz) = 7aa87e547a26b92d367c8b6d4ca827f9176ceabe4a66e3f4461d7b54ec85a4ac51a42ddd13793052f7948926f5152b5882d726f566176f499eea2d739a510ad8
-Size (pavumeter-0.9.3.tar.gz) = 89241 bytes
