@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2544 2024/04/17 14:36:36 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2545 2024/04/17 14:37:28 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4199,3 +4199,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Removed devel/libview [wiz 2024-04-17]
 	Removed graphics/gimmage [wiz 2024-04-17]
 	Removed audio/paman [wiz 2024-04-17]
+	Removed audio/pavumeter [wiz 2024-04-17]
